--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
       <button class="clear-item button">CLEAR CART</button>
       <button class="checkout button">CHECKOUT</button>
     </div>
-    <script src="./index.js"></script>
+    <script src="./class.js"></script>
   </body>
 </html>
